# predictive-maintenance

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  README.md  RUNBOOK.md  conftest.py  docker-compose.yml  main.py  params.yaml  pyproject.toml
.claude/: README.md  settings.json
.claude/hooks/: check_quality.py  format_python.py  guard_paths.py
.dvc/: config
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_bronze_tables.py  0002_meta_lineage.py
app/: lineage_app.py
artifacts/gold/: runs_registry.json
docs/: ARCHITECTURE.md  GOLD_DATASET_FR.md  MODELING.md  TECHNICAL.md
docs/adr/: 0001-medallion-db-chained.md  0002-bronze-non-destructive-validation.md  0003-silver-reject-policy.md  0004-gold-single-table-no-leakage.md  0005-lineage-and-golden-tests.md  0006-framework-usecase-split.md  0007-copy-bulk-load.md  0008-gold-params-no-dvc-dag.md  0009-schema-contract-drift-guard.md  0010-gold-enrichment-and-leakage-fix.md  README.md
notebooks/: 01_exploration.ipynb  01_incidents.ipynb  02_telemetry.ipynb  03_machines.ipynb  04_cross_source.ipynb  pipeline.ipynb
scripts/: predmaint.py  run_all.py  run_cross_source.py  run_incidents.py  run_ingestion.py  run_machines.py  run_pipeline.py  run_telemetry.py
src/: __init__.py  config.py  orchestrator.py  pipeline.py  quality.py  settings.py
src/analyses/: __init__.py  joins.py  plots.py  runner.py
src/common/: coherence.py  env.py  overview.py  processing_summary.py  profiling.py  quality.py  registry.py  reporting.py  stage.py  synthesis.py
src/database/: __init__.py  engine.py  loader.py  models_bronze.py
src/framework/: __init__.py  timeutils.py
src/gold/: features.py  stats.py
src/ingestion/: __init__.py  anonymizer.py  load.py  loader.py  pipeline.py  runner.py  schemas.py  stats.py  validate.py
src/lineage/: __init__.py  models.py  tracker.py
src/notebook/: __init__.py  render.py
tests/: test_contracts.py  test_dashboard.py  test_evaluation.py  test_experiment.py  test_factorizations.py  test_gold_features.py  test_golden.py  test_loader.py  test_processing.py  test_refine_policy.py  test_settings.py  test_silver_variants.py  test_validate.py
(+202 files in other folders)
