[project]
name = "predictive-maintenance"
version = "0.1.0"
description = "Maintenance prédictive industrielle — ingestion, anonymisation et EDA des relevés d'incidents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "dvc>=3.67.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ipykernel>=6.29,<7",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.17",
    "streamlit>=1.58.0",
]

[tool.uv]
# This project is an application, not a library: do not build/install it as a
# package. Modules under src/ are imported via sys.path (see scripts and notebook).
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: isort, UP: pyupgrade, B: bugbear
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true  # pandas/matplotlib/scipy ship no stubs we depend on

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "golden: integration tests against data/raw (skipped if the files are absent)",
]
